# docassemble-ALToolbox

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  docsig_output.txt  mypy.ini  promptfoo-goal-oriented-questions.yml  pyproject.toml  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: black-action.yml  publish.yml  unit-tests.yml
docassemble/ALToolbox/: Addup.py  PhoneNumberDataType.py  ThreePartsDate.py  __init__.py  addenda.py  al_income.py  business_days.py  copy_button.py  display_template.py  income.py  llms.py  misc.py  requirements.txt  save_input_data.py  share_button.py  test_al_income.py  test_altoolbox.py  test_llms.py  test_misc.py
docassemble/ALToolbox/data/questions/: Addup.yml  Bells and whistles.yml  Profiling.yml  Shorten a url.yml  TextCounter.yml  ThreePartsDate.yml  addenda_for_docx_text_overflow.yml  addenda_for_pdf_text_overflow.yml  addenda_for_table_ records_overflow.yml  al_income.yml  al_income_demo.yml  altoolbox_overview.yml  business_days_demo.yml  chat_completion_demo.yml  collapse_template.yml  collapse_template_demo.yml  copy_button.yml  copy_button_demo.yml  display_template.yml  display_template_demo.yml  escape_button.yml  escape_button_demo.yml  extract_fields_demo.yml  goal_oriented_question.yml  goal_oriented_question_demo.yml  goal_oriented_question_structured.yml  goal_oriented_question_structured_demo.yml  goal_satisfy.yml  goal_satisfy_demo.yml  income.yml  income_demo.yml  income_demoCR.yml  intake.yml  intake_demo.yml  multiselect.yml  multiselect_demo.yml  nice_county_name_demo.yml  output_checkbox_demo.yml  phone-number-validation.yml  phone_number_validation_demo.yml  (+10 more)
docassemble/ALToolbox/data/sources/: README.md
docassemble/ALToolbox/data/static/: TextCounter.js  al_split_date.css  al_three_parts_date.css  bootstrap-multiselect.css  bootstrap-multiselect.js  collapse_template.css  copy_button.css  copy_button.js  custom_504.html  display_template.css  escape_button.css  escape_button.js  highlight_jinja_word_macro.txt  phone-number-validation.js  phone-number-validator.css  reaction_widget.css  reaction_widget.js  review_widget.css  review_widget.js  share_button.css  share_button.js  styles.css  thumbs_widget.css
docassemble/ALToolbox/data/templates/: output-checkbox.docx  text-addendum-to-pdf.docx
docassemble/AssemblyLineToolbox/: ThreePartsDate.py  misc.py
docassemble/AssemblyLineToolbox/data/questions/: Addenda - extra table records.yml  Addenda - text too long for PDF form.yml  Addenda - text too long for docx form.yml  Addup.yml  Assembly-Line-Toolbox.yml  Shorten a url.yml  TextCounter.yml  ThreePartsDate.yml  phone-number-validation.yml
docassemble/AssemblyLineToolbox/data/static/: ThreePartsDate.js  phone-number-validation.js  phone-number-validator.css  textDateInput.js
docassemble/AssemblyLineToolbox/data/templates/: table-addendum.docx  text-addendum-to-docx.docx
docassemble/VirtualCourtToolbox/: ThreePartDateDataType.py  addenda.py  misc.py  shortenURL.py
docassemble/VirtualCourtToolbox/data/questions/: Virtual-Court-Toolbox.yml
docassemble/VirtualCourtToolbox/data/static/: textDateInput.js
