[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ALToolbox"
version = "0.17.2"
description = "Collection of small utility functions, classes, and web components for Docassemble interviews"
readme = "README.md"
authors = [
    { name = "Suffolk Legal Innovation and Technology Lab", email = "litlab@suffolk.edu" },
]
dependencies = [
    "holidays>=0.79",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "tiktoken>=0.12.0",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
